--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,34 @@
 .errorSnackbar button {
 	margin-left: 10px;
 }
+
+.formBlock {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.formBlock input {
+	margin-bottom: 10px;
+}
+
+.contantTodolists {
+	border: 1px solid #ccc;
+	padding: 20px;
+	display: flex;
+	flex-wrap: wrap;
+	margin: -10px;
+}
+
+.todolist {
+	padding: 10px;
+	margin: 10px;
+	border: 1px solid #ccc;
+	box-shadow: 0 0 10px #ccc;
+}
+
+.app-loading {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
